Reduce hierarchy level; stub for Numbrz tables topic

--- a/help/data/data.html
+++ b/help/data/data.html
@@ -11,8 +11,11 @@
       <div id="content">
         <h2>Data in Numbrz</h2>
         <p>Numbrz Models work by reading and writing data from a number of popular services and applications. Your data is made available to a model by creating <em>connections</em>. A connection is a reference to some external data source that you are authorized to access. Once successfully connected, you choose what data (sheets, tables, files, etc.) to make available to the Numbrz application.</p>
+        <h3>Connect to Data</h3>
+        <p>Click the + icon in the lower right corner to begin the connection process. Select the desired data source from the drop down menu. Depending upon the data source, you will be prompted for additional information to complete the connection. In most cases, this will include authorizing the Numbrz application to access your data on your behalf.</p>
+        <img src="images/create.gif" alt="Create Connection" class="giphy-med"/>
         <hr />
-        <p><em>See Also: <a href="data_support.html">Supported Data Sources</a>, <a href="data_create.html">Creating a Connection</a></em></p>
+        <p><em>See Also: <a href="data_sources.html">Supported Data Sources</a></em></p>
       </div>
     </div>
   </body>
