--- a/help/data/data_sources.html
+++ b/help/data/data_sources.html
@@ -19,7 +19,7 @@
           <li><a href="data_dropbox.html">Dropbox Files</a></li>
         </ul>
         <hr />
-        <p><em>See Also: <a href="data_create.html">Creating a Connection</a>, <a href="data_conf.html">Configure a Connection</a></em></p>
+        <p><em>See Also: <a href="data.html">About Data</a>, <a href="data_conf.html">Configure a Connection</a></em></p>
       </div>
     </div>
   </body>
