--- a/help/index.html
+++ b/help/index.html
@@ -11,33 +11,30 @@
       <div id="content">
         <h2>Numbrz In-App Help</h2>
         <ul class="list">
-          <li><b><a href="models/models.html">Models</a></b>
+          <li><b><a href="models/models.html">Models</a></b> (<i>Model list</i>)
             <ul>
-              <li><a href="models/models_create.html">Create a Model</a></li>
               <li><a href="models/models_conf.html">Configure a Model</a>
                 <ul>
-                  <li><a href="models/models_overview.html">Overview</a></li>
-                  <li><b><a href="models/jobs/jobs.html">Jobs</a></b>
+                  <li><a href="models/models_overview.html">Overview</a> (<i>Model => Overview tab</i>)</li>
+                  <li><b><a href="models/jobs/jobs.html">Jobs</a></b> (<i>Model => Job list</i>)
                     <ul>
-                      <li><a href="models/jobs/jobs_create.html">Create a Job</a></li>
                       <li><a href="models/jobs/jobs_conf.html">Configure a Job</a>
                         <ul>
-                          <li><a href="models/jobs/jobs_overview.html">Overview</a></li>
-                          <li><a href="models/jobs/jobs_inputs.html">Inputs</a></li>
-                          <li><a href="models/jobs/jobs_outputs.html">Outputs</a></li>
+                          <li><a href="models/jobs/jobs_overview.html">Overview</a> (<i>Model => Job editor => Overview tab</i>)</li>
+                          <li><a href="models/jobs/jobs_inputs.html">Inputs</a> (<i>Model => Job editor => Inputs tab</i>)</li>
+                          <li><a href="models/jobs/jobs_outputs.html">Outputs</a> (<i>Model => Job editor => Outputs tab</i>)</li>
                         </ul>
                       </li>
                       <li><a href="models/jobs/jobs_run.html">Run a Job</a>
                         <ul>
-                          <li><a href="models/jobs/jobs_run_status.html">Job Status</a></li>
+                          <li><a href="models/jobs/jobs_run_status.html">Job Status</a> (<i>Model => Job status</i>)</li>
                         </ul>
                       </li>
                     </ul>
                   </li>
-                  <li><b><a href="models/functions/functions.html">Functions</a></b>
+                  <li><b><a href="models/functions/functions.html">Functions</a></b> (<i>Model => Function list</i>)
                     <ul>
-                      <li><a href="models/functions/functions_create.html">Create a Function</a></li>
-                      <li><a href="models/functions/functions_conf.html">Configure a Function</a>
+                      <li><a href="models/functions/functions_conf.html">Configure a Function</a> (<i>Model => Function editor</i>)
                         <ul>
                           <li><a href="models/functions/functions_widgets.html">Available Widgets</a>
                             <ul>
@@ -56,31 +53,28 @@
                       </li>
                     </ul>
                   </li>
-                  <li><b><a href="models/flows/flows.html">Flows</a></b>
+                  <li><b><a href="models/flows/flows.html">Flows</a></b> (<i>Model => Flow list</i>)
                     <ul>
-                      <li><a href="models/flows/flows_create.html">Create a Flow</a></li>
                       <li><a href="models/flows/flows_conf.html">Configure a Flow</a>
                         <ul>
-                          <li><a href="models/flows/flows_overview.html">Overview</a></li>
-                          <li><a href="models/flows/flows_stages.html">Flow Stages</a>
+                          <li><a href="models/flows/flows_overview.html">Overview</a> (<i>Model => Flow editor => Overview tab</i>)</li>
+                          <li><a href="models/flows/flows_stages.html">Flow Stages</a> (<i>Model => Flow editor => Stages tab</i>)
                             <ul>
-                              <li><a href="models/flows/flows_stages_create.html">Create a Stage</a></li>
                               <li><a href="models/flows/flows_stages_conf.html">Configure a Stage</a>
                                 <ul>
-                                  <li><a href="models/flows/flows_stages_input.html">Stage Input</a></li>
+                                  <li><a href="models/flows/flows_stages_input.html">Stage Input</a> (<i>Model => Flow editor => Stage editor => Input tile</i>)</li>
                                   <li><a href="models/flows/flows_stages_steps.html">Stage Steps</a>
                                     <ul>
-                                      <li><a href="models/flows/flows_stages_steps_create.html">Create a Step</a></li>
                                       <li><a href="models/flows/flows_stages_steps_conf.html">Configure a Step</a>
                                         <ul>
-                                          <li><a href="models/flows/flows_stages_steps_combine.html">Combine Data</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_fill.html">Fill</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_grpsort.html">Group and Sort</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_slice.html">Slice</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_execute.html">Execute Function</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_aggregate.html">Aggregate</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_filter.html">Filter</a></li>
-                                          <li><a href="models/flows/flows_stages_steps_output.html">Output</a></li>
+                                          <li><a href="models/flows/flows_stages_steps_combine.html">Combine Data</a> (<i>Model => Flow editor => Stage editor => Combine tile</i>)</li>
+                                          <li><a href="models/flows/flows_stages_steps_fill.html">Fill</a> (<i>Model => Flow editor => Stage editor => Fill tile</i>)</li>
+                                          <li><a href="models/flows/flows_stages_steps_grpsort.html">Group and Sort</a> (<i>Model => Flow editor => Stage editor => Group Sort tile</i>)</li>
+                                          <li><a href="models/flows/flows_stages_steps_slice.html">Slice</a> (<i>Model => Flow editor => Stage editor => Slice tile</i>)</li>
+                                          <li><a href="models/flows/flows_stages_steps_execute.html">Execute Function</a> (<i>Model => Flow editor => Stage editor => Function tile</i>)</li>
+                                          <li><a href="models/flows/flows_stages_steps_aggregate.html">Aggregate</a> (<i>Model => Flow editor => Stage editor => Aggregate tile</i>)</li>
+                                          <li><a href="models/flows/flows_stages_steps_filter.html">Filter</a> (<i>Model => Flow editor => Stage editor => Filter tile</i>)</li> 
+                                          <li><a href="models/flows/flows_stages_steps_output.html">Output</a> (<i>Model => Flow editor => Stage editor => Output tile</i>)</li>
                                         </ul>
                                       </li>
                                     </ul>
@@ -90,10 +84,9 @@
                               <li><a href="models/flows/flows_stages_test.html">Testing a Stage</a></li>
                             </ul>
                           </li>
-                          <li><a href="models/flows/flows_wtables.html">Working Tables</a>
+                          <li><a href="models/flows/flows_wtables.html">Working Tables</a> (<i>Model => Flow editor => Data tab</i>)
                             <ul>
-                              <li><a href="models/flows/flows_wtables_create.html">Create a Working Table</a></li>
-                              <li><a href="models/flows/flows_wtables_conf.html">Configure a Working Table</a></li>
+                              <li><a href="models/flows/flows_wtables_conf.html">Configure a Working Table</a> (<i>Model => Flow editor => WT editor</i>)</li>
                             </ul>
                           </li>
                         </ul>
@@ -106,23 +99,16 @@
               </li>
             </ul>
           </li>
-          <li><b><a href="data/data.html">Data</a></b>
+          <li><b><a href="data/data.html">Data</a></b> (<i>Data list</i>)
             <ul>
-              <li><a href="data/data_create.html">Create a Connection</a></li>
-              <li><a href="data/data_support.html">Supported Data Sources</a>
+              <li><a href="data/data_sources.html">Data Sources</a>
                 <ul>
                   <li><a href="data/data_google.html">Google Spreadsheets</a></li>
                   <li><a href="data/data_quickbooks.html">QuickBooks Online</a></li>
                   <li><a href="data/data_snowflake.html">Snowflake Databases</a></li>
                   <li><a href="data/data_excel.html">Excel Spreadsheets</a></li>
                   <li><a href="data/data_dropbox.html">Dropbox Files</a></li>
-                </ul>
-              </li>
-              <li><a href="data/data_conf.html">Configure a Connection</a>
-                <ul>
-                  <li><a href="data/data_overview.html">Overview</a></li>
-                  <li><a href="data/data_connected.html">Connected</a></li>
-                  <li><a href="data/data_available.html">Available</a></li>
+                  <li><a href="data/data_userdb.html">Numbrz User Database</a></li>
                 </ul>
               </li>
             </ul>
