--- a/help/models/flows/flows_conf.html
+++ b/help/models/flows/flows_conf.html
@@ -17,7 +17,7 @@
           <li><a href="flows_wtables.html">Flow Data</a></li>
         </ul>
         <hr/>
-        <p><em>See also: <a href="flows.html">About Flows</a>, <a href="flows_create.html">Create a Flow</a></em></p>
+        <p><em>See also: <a href="flows.html">About Flows</a></em></p>
       </div>
     </div>
   </body>
