--- a/help/models/flows/flows_stages.html
+++ b/help/models/flows/flows_stages.html
@@ -11,8 +11,11 @@
       <div id="content">
         <h2>Flow Stages</h2>
         <p>A Flow <b>Stage</b> processes sets of records by passing them through a sequence of <b>Steps</b>, which configure various transformations and calculations, including executing <b>Functions</b>. A sequence of stages can be related by the sharing of data. Data is shared, for example, when data written by one stage is used as input to another in the same <b>Flow</b>.</p>
+        <h3>Create a New Stage</h3>
+        <p>To create a new <b>Stage</b>, select <i>Flow Stages</i> from the right side bar, then click the <i>New Stage</i> button. You will be prompted for a name.  Once created, you can format the input data and begin adding <b>Steps</b>.</p>
+        <img src="images/create_stage.gif" alt="Create Flow" class="giphy-med" />
         <hr />
-        <p><em>See also: <a href="flows_stages_create.html">Create a Stage</a>, <a href="flows_stages_conf.html">Configure a Stage</a>, <a href="flows_stages_steps.html">About Stage Steps</a></em></p>
+        <p><em>See also: <a href="flows_stages_conf.html">Configure a Stage</a>, <a href="flows_stages_steps.html">About Stage Steps</a>, <a href="flows_stages_test.html">Testing a Stage</a></em></p>
       </div>
     </div>
   </body>
