--- a/help/models/flows/flows_stages_steps_conf.html
+++ b/help/models/flows/flows_stages_steps_conf.html
@@ -22,7 +22,7 @@
           <li><a href="flows_stages_steps_output.html">Output</a></li>
         </ul>
         <hr />
-        <p><em>See also: <a href="flows_stages_steps.html">About Stage Steps</a>, <a href="flows_stages_steps_create.html">Create a Step</a>, <a href="flows_stages.html">About Flow Stages</a></em></p>
+        <p><em>See also: <a href="flows_stages_steps.html">About Stage Steps</a>, <a href="flows_stages.html">About Flow Stages</a></em></p>
       </div>
     </div>
   </body>
