--- a/help/models/flows/flows_wtables.html
+++ b/help/models/flows/flows_wtables.html
@@ -12,8 +12,11 @@
         <h2>Working Tables</h2>
         <p>A <b>Working Table</b> is a temporary table with a well-defined structure that exists only for the duration of a <b>Flow</b>. A sequence of stages can be related by the sharing of data. Data is shared, for example, when data written by one stage is used as input to another in the same flow. Working tables are defined within the flow, which means they can be used without explicitly mapping external tables via a <b>Job</b>. Sharing data between stages using working tables is a great way to simplify the logic of your flows by breaking large, complex analyses into component parts.</p>
         <img src="images/working-table.png" alt="Working Table" class="diagram-sm" />
+        <h2>Create a Working Table</h2>
+        <p>Working Tables are defined within a <b>Flow</b>. Select the <i>Data</i> section and click <i>New Working Table</i>. Give the table a name and optionally a description. You can then begin to define the table's columns.</p>
+        <img src="images/create_wtable.gif" alt="Create a Working Table" class="giphy-med" />
         <hr />
-        <p><em>See also: <a href="flows_wtables_create.html">Create a Working Table</a>, <a href="flows_wtables_conf.html">Configure a Working Table</a>, <a href="flows_stages_steps.html">About Stage Steps</a></em></p>
+        <p><em>See also: <a href="flows_wtables_conf.html">Configure a Working Table</a>, <a href="flows_stages_steps.html">About Stage Steps</a></em></p>
       </div>
     </div>
   </body>
