--- a/help/models/functions/functions.html
+++ b/help/models/functions/functions.html
@@ -13,8 +13,12 @@
         <p>A <b>Function</b> is a component of a model that performs a calculation. Functions are used when processing input data in a <b>Flow</b>. A Numbrz Function is similar in use to a spreadsheet formula, but unlike spreadsheets, these flexible and re-usable calculations are built graphically.</p>
         <img src="images/simple_function.gif" alt="Simple Function" class="giphy-med" />
         <p>A <b>Function</b> is a collection of <em>Widgets</em> which provide a variety of capabilities like accepting input, producing output, simple arithmetic, and conditional logic. When editing a function, users can quickly create and connect pieces of logic that will process the functions's inputs and produce the output. Numbrz provides users with a number of pre-built widgets that can be combined to create complex calculations and relationships between data.</p>
+        <h3>Create a New Function</h3>
+        <p>To create a new function, click the + icon in the lower right corner. You will be prompted for a name.  Once created, you will see the function's inputs and outputs, and are ready to add widgets.</p>
+        <img src="images/create_function.gif" alt="Create Function" class="giphy-med" />
+
         <hr />
-        <p><em>See also: <a href="functions_widgets.html">Available Widgets</a>, <a href="functions_create.html">Create a Function</a>, <a href="functions_conf.html">Configure a Function</a></em></p>
+        <p><em>See also: <a href="functions_widgets.html">Available Widgets</a>, <a href="functions_conf.html">Configure a Function</a></em></p>
       </div>
     </div>
   </body>
