--- a/help/models/jobs/jobs.html
+++ b/help/models/jobs/jobs.html
@@ -16,8 +16,13 @@
             <li>Receive the output data fields emitted by the flow.</li>
           </ul>
           <p>The job is the executable unit of a Numbrz Model, running a job starts an analysis. Status information is provided as the job runs.</p>
+        <h3>Create a New Job</h3>
+        <p><p>To create a new <b>Job</b>, click the + icon in the lower right corner. You will be prompted to select the <b>Flow</b> that will provide the logic for this job, as well as a <i>Name</i> for the job. There are two options for mapping <i>Data</i> to the <i>Flow</i>.</p>
+        <p><b>Automatically Configure Mappings</b><br/>Choose this option when you have already connected data that closely matches the inputs and outputs declared in the flow. Using data field name and type matching, Numbrz will attempt to create the needed data mappings.</p>
+        <img src="images/create_job.gif" alt="Create a Job" class="giphy-med" />
+        <p><b>Manually Configure Mappings</b><br/>If you are unsure of what data is required by the flow, or do not know what data connections are already available, you may select this option. The automated mapping will be skipped and the job editor will be displayed so you can continue the configuration. <a href="jobs_conf.html">Configuring a Job</a> will explain this in detail.</p>
         <hr />
-        <p><em>See also: <a href="../flows/flows.html">About Flows</a>, <a href="../../data/data.html">About Data</a>, <a href="jobs_create.html">Create a Job</a>, <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
+        <p><em>See also: <a href="../flows/flows.html">About Flows</a>, <a href="../../data/data.html">About Data</a>, <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
       </div>
     </div>
   </body>
