--- a/help/models/jobs/jobs_conf.html
+++ b/help/models/jobs/jobs_conf.html
@@ -17,7 +17,7 @@
           <li><a href="jobs_outputs.html">Outputs</a></li>
         </ul>
         <hr />
-        <p><em>See also: <a href="jobs_create.html">Create a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
+        <p><em>See also: <a href="jobs.html">About Jobs</a><a href="jobs_run.html">Run a Job</a></em></p>
       </div>
     </div>
   </body>
