--- a/help/models/jobs/jobs_inputs.html
+++ b/help/models/jobs/jobs_inputs.html
@@ -29,7 +29,7 @@
         <img src="images/filter_input.png" alt="Input Filter" class="static-80" />
         <p>In this example, only records with both <b>Hire Date</b> greater 1/01/2020 AND <b>Salary</b> equal to 100,000; OR records with <b>Name</b> equal to 'Smith' will sent to the flow.</p>
         <hr />
-        <p><em>See also: <a href="jobs_create.html">Create a Job</a>, <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
+        <p><em>See also: <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
       </div>
     </div>
   </body>
