--- a/help/models/jobs/jobs_outputs.html
+++ b/help/models/jobs/jobs_outputs.html
@@ -23,7 +23,7 @@
         <img src="images/erase_criteria.png" alt="Erase Criteria" class="static-80" />
         <p>In the example above, imagine each department has its own job that writes a departmental analysis to a single results table. The records emitted by these models are tagged with the departments name. Now when running, each department can replace only their own rows in the data target.
         <hr />
-        <p><em>See also: <a href="jobs_create.html">Create a Job</a>, <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
+        <p><em>See also: <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
       </div>
     </div>
   </body>
