--- a/help/models/jobs/jobs_overview.html
+++ b/help/models/jobs/jobs_overview.html
@@ -12,7 +12,7 @@
         <h2>Overview</h2>
         <p>The <b>Overview</b> section of job configuration is where  a <i>Name</i> and <i>Description</i> can be set. Use name and description fields to document your jobs. </p>
         <hr />
-        <p><em>See also: <a href="jobs_create.html">Create a Job</a>, <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
+        <p><em>See also: <a href="jobs_conf.html">Configure a Job</a>, <a href="jobs_run.html">Run a Job</a></em></p>
       </div>
     </div>
   </body>
