--- a/help/models/jobs/jobs_run.html
+++ b/help/models/jobs/jobs_run.html
@@ -13,7 +13,7 @@
         <p>Running a <b>Job</b> executes the logic of functions and flows by reading data and writing results. Jobs that have no configuration errors can be run from the job list by clicking the <i>Run</i> button on the list item. Jobs can also be run from within the job editor. As the job runs, status information is updated in real time.</p>
         <img src="images/run_job.gif" alt="Run a Job" class="giphy-med" />
         <hr />
-        <p><em>See also: <a href="jobs_run_status.html">Job Status</a>, <a href="../models_recent_runs.html">Recent Runs</a>, <a href="jobs_create.html">Create a Job</a>, <a href="jobs_conf.html">Configure a Job</a></em></p>
+        <p><em>See also: <a href="jobs_run_status.html">Job Status</a>, <a href="../models_recent_runs.html">Recent Runs</a>, <a href="jobs_conf.html">Configure a Job</a></em></p>
       </div>
     </div>
   </body>
