--- a/help/models/models.html
+++ b/help/models/models.html
@@ -21,9 +21,12 @@
         </div>
         <p> When a Job is run, the relationships between model components look like this:</p>
         <img src="images/model-overview.png" alt="Model Overview" class="diagram-med"/>
-        <p>This is a very simple view of a generic job. By adding flow stages and functions, and ingesting more data sources, very sophisticated analyses can be built. Don't worry if this does not make much sense yet. Once you work with each component in detail and run a few jobs, the workings of a model will become much clearer.</p> 
+        <p>This is a very simple view of a generic job. By adding flow stages and functions, and ingesting more data sources, very sophisticated analyses can be built.</p> 
+        <h3>Create a New Model</h3>
+        <p>To create a new model, click the + icon in the lower right corner. You can elect to create a new empty model, or select from a number of pre-built templates. Once created, you should give the model a name and description. You can then begin to add content to the model.</p>
+        <img src="images/create_model.gif" alt="Create Connection" class="giphy-med"/>
         <hr />
-        <p><em>See also: <a href="models_create.html">Create a Model</a>, <a href="models_conf.html">Configure a Model</a>, <a href="../data/data.html">About Data</a></em></p>
+        <p><em>See also: <a href="models_conf.html">Configure a Model</a>, <a href="../data/data.html">About Data</a></em></p>
       </div>
     </div>
   </body>
