--- a/help/models/models_conf.html
+++ b/help/models/models_conf.html
@@ -20,7 +20,7 @@
           <li><a href="models_recent_runs.html">Recent Runs</a></li>
         </ul>
         <hr />
-        <p><em>See Also: <a href="models.html">About Models</a>, <a href="models_create.html">Create a Model</a></em></p>
+        <p><em>See Also: <a href="models.html">About Models</a></em></p>
       </div>
     </div>
   </body>
