--- a/help/data/data_google.html
+++ b/help/data/data_google.html
@@ -22,8 +22,18 @@
           <li>Copy the URL of the spreadsheet you wish to connect and paste it at the prompt.</li>
           <li>Be ready to provide your Google user name and password to authorize Numbrz to access your data.</li>
         </ul>
+        <h3>Configuring the Connection</h3>
+        <p><b>Overview section</b><br/>This section allows you to set a name and description associated with this data connection. In addition, should your authorization change or expire, you can click the <b>Reconnect</b> button to re-authorize access to your data. In the event of a reconnection, all current configuration, including connected sheets, is preserved.</p>
+        <p><b>Available Sheets</b><br/>This section shows the google sheet tabs that are inside the spreadsheet you linked, but not yet connected to the Numbrz application. To connect an item, select it from the list and click the <b>Connect Sheet</b> button. Upon successful connection, it will now appear in the <b>Connected Sheets</b> section. Note that information about the available data is stored for short periods of time within Numbrz, if the desired item does not appear in the list, click the <b>Reload</b> button to refresh this information from the Google spreadsheet.</p>
+        <p><b>Connected Sheets</b><br/>This section shows the data you have connected and made available to the Numbrz application. If there are no items listed here, click the <b>Available Sheets</b> section to select data. To manage a connected item, select it from the list. You can perform the following: </p>
+        <ul class="list">
+            <li>Edit the <b>Name</b> and <b>Description</b> of the item.</li>
+            <li><b>Refresh</b> the columns from the source data. If columns appear in the source data, but are not in the description here, this will update the stored column information from the source.</li>
+            <li>Set the data <b>Type</b> of columns. Numbrz does its best to guess the best data type in most cases, but in the event that guess is incorrect, the type can be manually set.
+            <li><b>Disconnect</b> the item if it is no longer needed.</li> 
+          </ul>
         <hr/>
-        <p><em>See Also: <a href="data_conf.html">Configure a Connection</a></em></p>
+        <p><em>See Also: <a href="data_sources.html">Data Sources</a></em></p>
       </div>
     </div>
   </body>
