--- a/help/models/flows/flows.html
+++ b/help/models/flows/flows.html
@@ -13,6 +13,9 @@
         <p>A <b>Flow</b> executes a configurable sequence of <b>Stages</b>. Flow stages read input data, then allow for each record to be handled in turn by a number of calculations and transformations, including executing <b>Functions</b>. Stages output data at various points. The sequence of stages is related by the sharing of data. Data is shared, for example, when data written by one stage is used as input to another. The data may be external (via a <b>Job</b> configuration) or a <b>Working Table</b> defined by the flow.</p>
         <p>A Stage processes a set of records by passing them through a sequence of <b>Steps</b>, which configure various transformations and calculations. Stages are complete when all data in the input has been processed. Flows are complete when all stages are complete.</p>
         <p>Flows are not bound to specific data stored in any particular data source, but rather specify the general structure of the data they require as input and emit as output. This means that flows can be re-used in various configurations with any data sources that meet these specifications. <b>Jobs</b> are used to map actual data to the flow's requirements and are run to execute the logic of the flow and its stages.</p>
+        <h3>Create a New Flow</h3>
+        <p>To create a new Flow, click the + icon in the lower right corner. You will be prompted for a name.  Once created, you can begin adding <b>Stages</b>.</p>
+        <img src="images/create_flow.gif" alt="Create Flow" class="giphy-med" />
         <hr />
         <p><em>See also: <a href="flows_conf.html">Configure a Flow</a>, <a href="../jobs/jobs.html">About Jobs</a>, <a href="flows_stages.html">About Flow Stages</a>, <a href="../functions/functions.html">About Functions</a></em></p>
       </div>
