--- a/help/index.html
+++ b/help/index.html
@@ -103,12 +103,12 @@
             <ul>
               <li><a href="data/data_sources.html">Data Sources</a>
                 <ul>
-                  <li><a href="data/data_google.html">Google Spreadsheets</a></li>
-                  <li><a href="data/data_quickbooks.html">QuickBooks Online</a></li>
-                  <li><a href="data/data_snowflake.html">Snowflake Databases</a></li>
-                  <li><a href="data/data_excel.html">Excel Spreadsheets</a></li>
-                  <li><a href="data/data_dropbox.html">Dropbox Files</a></li>
-                  <li><a href="data/data_userdb.html">Numbrz User Database</a></li>
+                  <li><a href="data/data_google.html">Google Spreadsheets</a> (<i>Data => Tableset editor {conType == GSheets}</i>)</li>
+                  <li><a href="data/data_quickbooks.html">QuickBooks Online</a> (<i>Data => Tableset editor {conType == Quickbooks}</i>)</li>
+                  <li><a href="data/data_snowflake.html">Snowflake Databases</a> (<i>Data => Tableset editor {conType == Snowflake}</i>)</li>
+                  <li><a href="data/data_excel.html">Excel Spreadsheets</a> (<i>Data => Tableset editor {conType == Excel}</i>)</li>
+                  <li><a href="data/data_dropbox.html">Dropbox Files</a> (<i>Data => Tableset editor {conType == Dropbox}</i>)</li>
+                  <li><a href="data/data_userdb.html">Numbrz Databases</a> (<i>Data => Tableset editor {conType == Numbrz}</i>)</li>
                 </ul>
               </li>
             </ul>
