Fix missing links

--- a/help/data/data_sources.html
+++ b/help/data/data_sources.html
@@ -17,9 +17,10 @@
           <li><a href="data_snowflake.html">Snowflake Databases</a></li>
           <li><a href="data_excel.html">Excel Spreadsheets</a></li>
           <li><a href="data_dropbox.html">Dropbox Files</a></li>
+          <li><a href="data_userdb.html">Numbrz Databases</a></li>
         </ul>
         <hr />
-        <p><em>See Also: <a href="data.html">About Data</a>, <a href="data_conf.html">Configure a Connection</a></em></p>
+        <p><em>See Also: <a href="data.html">About Data</a></em></p>
       </div>
     </div>
   </body>
